# aareocams

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: config.toml
bot/: Cargo.toml
bot/src/: main.rs
client/: Cargo.toml  README.md
client/src/: lib.rs
code/bot/: Cargo.toml
code/bot/src/: camera_server.rs  config.rs  main.rs
code/bot/src/systems/: camera.rs  drivetrain.rs  mod.rs
code/core/: Cargo.toml
code/core/src/: lib.rs
code/dash/: Cargo.toml  README.md
code/dash/src/: config.rs  dash.rs  main.rs  stream.rs
code/dash/src/dash/: camera_viewer.rs  keyboard.rs  mod.rs
code/intercom/: Cargo.toml  README.md
code/intercom/src/: lib.rs
code/net/: Cargo.toml
code/net/src/: lib.rs
code/net/src/api/: mod.rs  motor.rs  motorkit_compat.rs  video.rs
code/scomm/: Cargo.toml  README.md
code/scomm/src/: lib.rs
code/scomm/src/connection/: mod.rs  read.rs  ser.rs  write.rs
code/subsystems/template/esp32c3-reference-project/: Cargo.toml  README.md  build.rs
code/subsystems/template/esp32c3-reference-project/.cargo/: config.toml
code/subsystems/template/esp32c3-reference-project/src/: main.rs
config/: README.md  bot.yml.template  dash-log4rs.yml  dash-log4rs.yml.template  dash.yml.template  deploy-config.sh.template
core/: Cargo.toml
core/src/: lib.rs
dash/: Cargo.toml
dash/src/: dash.rs  main.rs  stream.rs  stream_sender.rs  stream_watcher.rs
dash/src/old/: stream_sender.rs  stream_watcher.rs
net/: README.md
net/src/: lib.rs
scomm/: Cargo.toml
scomm/src/: connection.rs  header.rs  lib.rs
scomm/src/connection/: mod.rs  read.rs
server/: Cargo.toml
server/src/: lib.rs
tools/: deploy.sh
