[workspace]
members = [
    "code/core", #   aareocams-core
    "code/scomm", #  aareocams-scomm
    "code/net", #    aareocams-net
    "code/dash", #   aareocams-dash
    "code/bot", #    aareocams-bot
]
# because cargo workspace be dumb sometimes
resolver = "2"

[profile.speed]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
