[workspace]
members = [
    "code/core", #   aareocams-core
    "code/scomm", #  aareocams-scomm
    "code/net", #    aareocams-net
    "code/dash", #   aareocams-dash
    "code/bot", #    aareocams-bot
    "code/intercom"# aareocams-intercom
]
exclude = [
    "code/subsystems/template/esp32c3-reference-project"
]
# because cargo workspace be dumb sometimes
resolver = "2"

[profile.speed]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
#panic = "abort"
strip = true
