[package]
name = "aareocams-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"

[dependencies.aareocams-scomm]
path = "../scomm"

[dependencies.aareocams-net]
path = "../net"

[dependencies.aareocams-server]
path = "../server"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
