[package]
name = "aareocams-scomm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
bincode = "1.3.3"
thiserror = "1.0"
bytes = "1.1.0"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]