[package]
name = "aareocams-bot"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
pretty_env_logger = "0.4.0"
log = "0.4.16"
adafruit_motorkit = "0.1.0"
image = "0.23"

[dependencies.nokhwa]
version = "0.9"
features = ["input-v4l"]

[dependencies.aareocams-core]
path = "../core"

[dependencies.aareocams-scomm]
path = "../scomm"

[dependencies.aareocams-net]
path = "../net"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.lvenc]
path = "../../../lvenc-testing/lvenc"
