[package]
name = "aareocams-bot"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
pretty_env_logger = "0.4.0"
log = "0.4.16"
adafruit_motorkit = "0.1.0"
image = "0.23"
derivative = "2.2.0"
yaml-rust = "0.4"
flume = "0.10"
async-trait = "0.1"
rppal = "0.13"

[dependencies.aareocams-core]
path = "../core"

[dependencies.aareocams-scomm]
path = "../scomm"

[dependencies.aareocams-net]
path = "../net"

[dependencies.aareocams-intercom]
path = "../intercom"
features = ["rppi"]

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.nokhwa]
version = "0.9"
features = ["input-v4l"]

[dependencies.parking_lot]
# version = "0.1"
git = "https://github.com/Amanieu/parking_lot"
features = ["nightly", "deadlock_detection"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.lvenc]
git = "https://github.com/rowan-sl/lvenc"

[dependencies.dabus]
# make this into a git dependancy in the future
# this is curently only a path dep since dabus is under heavy development (by me)
path = "../../../dabus/dabus"
