[package]
name = "aareocams-dash"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
sn30pro = "0.2.0"
thiserror = "1.0"
derivative = "2.2.0"
log4rs = "1.0.0"
log = "0.4.16"
image = "0.23"
yaml-rust = "0.4"

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.aareocams-core]
path = "../core"

[dependencies.aareocams-scomm]
path = "../scomm"

[dependencies.aareocams-net]
path = "../net"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
features = ["tokio", "image"]

[dependencies.iced_native]
git = "https://github.com/iced-rs/iced.git"

[dependencies.lvenc]
path = "../../../lvenc-testing/lvenc"
