[package]
name = "aareocams-intercom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.13", optional = true }
esp-idf-hal = { version = "0.37", optional = true }

[dependencies.aareocams-core]
path = "../core"

[features]

esp32 = ["esp-idf-hal"]
rppi = ["rppal"]
experimental = ["esp-idf-hal/experimental"]
