[package]
name = "aareocams-net"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.aareocams-scomm]
path = "../scomm"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.17"
features = ["full"]
