[package]
name = "aareocams-scomm"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
bincode = "1.3.3"
thiserror = "1.0"
bytes = "1.1.0"
derivative = "2.2.0"
log = "0.4.16"
rustls = "0.20.4"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]